[project]
name = "fourth"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Rahul Dave", email = "rahuldave@gmail.com" }]
requires-python = ">= 3.10"
dependencies = []

[project.optional-dependencies]
test = ["coverage[toml]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]
fourth = "python fourth/console.py"

[tool.pixi.dependencies]
pixi-kernel = ">=0.3.0,<0.4"
jupyterlab = ">=4.2.0,<4.3"
python = "*"
ipykernel = ">=6.29.3,<6.30"
click = ">=8.1.7,<8.2"

[tool.pixi.pypi-dependencies]
fourth = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest = ">=7.2.0,<8.3"
pytest-cov = ">=5.0.0,<5.1"
pytest-mock = ">=3.14.0,<3.15"

[tool.pixi.feature.test.tasks]
test = "pytest --cov -m 'not e2e'"
teste2e = "pytest --cov -m 'e2e'"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

# Environments
[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
py310 = { features = ["py310"], solve-group = "py310" }
py311 = { features = ["py311"], solve-group = "py311" }
py310test = { features = ["py310", "test"], solve-group = "py310" }
py311test = { features = ["py311", "test"], solve-group = "py311" }

[tool.coverage.paths]
source = ["fourth"]
[tool.coverage.run]
branch = true
source = ["fourth"]
[tool.coverage.report]
show_missing = true
